--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -2,7 +2,7 @@ build:
   version: 2.1
 
 loans:
-  message: "Welcome to EazyBank loans related Product APIs "
+  message: "Welcome to EazyBank loans related production APIs "
   contactDetails:
     name: "Senniappan P - Product Owner"
     email: "senniappan@eazybank.com"
