--- a/accounts-qa.yml
+++ b/accounts-qa.yml
@@ -2,7 +2,7 @@ build:
   version: "1.2"
 
 accounts:
-  message: "Welcome to EazyBank accounts related QA APIs !!"
+  message: "Welcome to EazyBank accounts related QA APIs "
   contactDetails:
     name: "Dr Ashok Vishnu - QA Lead"
     email: "ashok@eazybank.com"
